# AI-camera

./: CMakeLists.txt  README.md  main.cpp
include/tts/: sc_embedding.h  sc_llm.h  sc_llmchain.h  sc_tts.h
src/: API_parse.cpp  API_parse.hpp  authorization.cpp  authorization.hpp  hmac.cpp  hmac.h  iat_online_record_sample.c  image_identify.cpp  image_identify.hpp  tts.cpp  tts.h
xunfei_Linux_SDK/libs/x64/: a.out
xunfei_Linux_SDK/samples/iat_online_sample/: iat_online_sample.c
xunfei_Linux_SDK/samples/ise_online_sample/: ise_online_sample.c
xunfei_Linux_SDK/samples/sch_translate_sample/: sch_speak_sample.c
xunfei_Linux_SDK/samples/tts_online_sample/: tts_online_sample.c
